--- a/frontend/vistas/admin.html
+++ b/frontend/vistas/admin.html
@@ -20,6 +20,7 @@
       <li><a href="/frontend/vistas/formulario/listadelosformularios.html">Solicitudes</a></li>
       <li><a href="/frontend/vistas/Metricas/metricas.html">Metricas</a></li>    
       <li><a href="/frontend/vistas/cupones/gestionCupones.html">Cupones</a></li>
+      <li><a href="#" id="logoutBtn">Cerrar sesión</a></li>
       </ul>
     </nav>
   </header>
@@ -53,5 +54,12 @@
     <p><i class="fa-solid fa-gear"></i> VetCarruseles - Administrador</p>
     <p class="copy">© 2025 VetCarruseles - Todos los derechos reservados</p>
   </footer>
+  <script>
+    document.getElementById('logoutBtn')?.addEventListener('click', async (e) => {
+      e.preventDefault();
+      try { await fetch('/api/logout', { method: 'POST', credentials: 'include' }); } catch(_){}
+      window.location.href = '/frontend/vistas/login/login.html';
+    });
+  </script>
 </body>
 </html>
